# Elastos.DID.Native.SDK

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml  release.yml
adapter/jni/: CMakeLists.txt  spvadapter_wrap.c
apps/: CMakeLists.txt
apps/agent/: CMakeLists.txt  main.c
apps/resolver/: CMakeLists.txt  main.c
apps/validater/: CMakeLists.txt  main.c
cmake/: ExternalCMakeArgs.cmake  ExternalConfigureArgs.cmake  ProjectDefaults.cmake
docs/source/: did-api.rst  did-error-number.rst  did-jwt-api.rst
hdkey/: BRNameFix.h  CMakeLists.txt  HDkey.c  HDkey.h  crypto.c  crypto.h  secp256k1_name_fix.h  winhelper.h
hdkey/BR/: BRAddress.c  BRAddress.h  BRBIP32Sequence.c  BRBIP32Sequence.h  BRBIP39Mnemonic.c  BRBIP39WordsFrance.h  BRBIP39WordsJap.h  BRBase58.c  BRCrypto.c  BRKey.c  BRKeyECIES.c  BRKeyECIES.h
python/: CMakeLists.txt  build.py  ela_did.ffi.h  ela_jwt.ffi.h  eladid_wrapper.py  get_suffix.py
samples/: CMakeLists.txt  assistadapter.c  assistadapter.h  common.c  common.h  createpresentation.c  didurlsample.c  entity.c  entity.h  initailizedid.c  issuecredential.c  main.c  parsejwt.c  presentationinjwt.c  restorefrommnemonic.c  rootidentitysample.c  samples.h
src/: CMakeLists.txt  credential.c  credential.h  credentialbiography.c  credentialbiography.h  credentialhistory.c  credentialhistory.h  did.c  did.h  didbackend.c  didbackend.h  didbiography.c  didbiography.h  diddocument.c  diddocument.h  didencryption.c  didencryption.h  diderror.c  diderror.h  didhistory.c  didhistory.h  didstore.c  didstore.h  didurl.c  didurl.h  ela_did.h  export.symbols.in  features.c  issuer.c  issuer.h  mnemonic.c  presentation.c  presentation.h  rootidentity.c  rootidentity.h  ticket.c  ticket.h
src/adapter/: dummyadapter.c  dummyadapter.h
src/backend/: didrequest.c  didrequest.h  didresolver.c  didresolver.h  didtransactioninfo.c  didtransactioninfo.h  resolvercache.c  resolvercache.h  resolveresult.c  resolveresult.h  vcrequest.c  vcrequest.h  vctransactioninfo.c  vctransactioninfo.h
src/jwt/: claims.c  claims.h  ela_jwt.h  jws.c  jwsparser.c  jwsparser.h  jwt.c  jwt.h  jwtbuilder.c  jwtbuilder.h  jwtparser.c
src/meta/: credmeta.c  credmeta.h  didmeta.c  didmeta.h  identitymeta.c  identitymeta.h  meta.c  meta.h  storemeta.c  storemeta.h
src/utility/: JsonGenerator.c  JsonGenerator.h  JsonHelper.c  JsonHelper.h  common.c  common.h
src/win/: winhelper.c  winhelper.h
tests/: CMakeLists.txt  suites.h  tests.c
tests/didtests/: did_constructor_test.c  did_operation_test.c  did_parse_test.c  didurl_constructor_test.c  didurl_operation_test.c  didurl_parse_test.c  suites.h
tests/doctests/: ctmdoc_elem_test.c  diddoc_cipher_test.c  diddoc_customieddoc_test.c  diddoc_customizeddoc_test.c  diddoc_elem_test.c  diddoc_json_op_test.c  diddoc_sign_test.c  suites.h
tests/dstoretests/: didstore_change_password.c  didstore_customied_did.c  didstore_customized_did.c  didstore_did_op_test.c  didstore_export_store.c  didstore_initial_test.c  didstore_openstore_test.c  didstore_rootidentity_test.c  didstore_vc_op_test.c  suites.h
tests/hdkeytests/: hdkey_base_test.c  hdkey_mnemonic_test.c  hdkey_rootkey_test.c  suites.h
tests/idchaintests/: idchain_dummyadapter_forctmdid_test.c  idchain_dummyadapter_test.c  idchain_dummyadapter_vc_test.c  idchain_operation_new_test.c  idchain_operation_test.c  idchain_restore_test.c  suites.h
tests/issuertests/: issuer_create_test.c  issuer_issuevc_test.c  suites.h
tests/jwttests/: jwt_test.c  suites.h
tests/resources/testdata/: controller.compact.json  controller.json  controller.normalized.json  controller.pk1.sk  controller.primary.sk  customized-multicontroller-empty.json  customized-multicontroller.json  customized-multisigone-empty.json  customized-multisigone.json  customized-multisigthree-empty.json  customized-multisigthree.json  customized-multisigtwo-empty.json  customized-multisigtwo.json  customized.k1.sk  customized.k2.sk  customized.recovery3.sk
tests/rootidentitytests/: rootidentity_test.c  suites.h
tests/testadapter/: didtest_adapter.c  dummyadapter.c  dummyadapter.h  simulateadapter.c  simulateadapter.h  testadapter.c  testadapter.h
tests/tickettests/: suites.h  ticket_test.c
tests/utility/: constant.c  constant.h  loader.c  loader.h  utility.c  utility.h
tests/vcchaintests/: suites.h  vcchain_dummyadapter_test.c
tests/vctests/: suites.h  vc_local_verify_test.c  vc_test.c
tests/vptests/: suites.h  vp_test.c
